@@ -1,3 +1,4 @@
 site_name  = CGI::Wiki Test Site
 script_url = http://wiki.example.com/
 script_name = 
+formatting_rules_node = Rules
