@@ -6,3 +6,4 @@ default_city = London
 contact_email = wiki@example.com
 stylesheet_url = http://wiki.example.com/styles.css
 home_name = Home Page
+formatting_rules_node = Rules
